manifests/system/harbor/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  annotations:
    k8s.dmann.xyz/cloudflare-domain-main: core.harbor.homelab.dmann.xyz
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`core.harbor.homelab.dmann.xyz`)
      priority: 10
      services:
        - name: harbor-portal
          port: 443
          scheme: https
  tls:
    certResolver: homelab
